--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.370.0",
+    "@aws-sdk/s3-request-presigner": "^3.370.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "bootstrap-icons": "^1.10.5",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
