adds image uploading functionality when creating listing using cloudinary

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.370.0",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.2",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "bootstrap-icons": "^1.10.5",
+    "cloudinary": "^1.37.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "framer-motion": "^10.12.18",
@@ -23,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.14.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
